--- a/README.rdoc
+++ b/README.rdoc
@@ -1,9 +1,5 @@
 = issue_notifier
 
-Description goes here
-=======
-= issue_notifier
-
 A Redmine Plugin to notify assignee and watchers through push notification when an issue has been reported.
 
 = Dependency
@@ -14,15 +10,26 @@ install redis with version 2.8 or higher
 
 To use this as a plugin clone the repo to your redmine/plugins directory
 
+Make sure to add following lines to redmine/cofig/settings.yml
+
+gcm:
+  api_key: ** your api key **
+apns:
+  host: "gateway.push.apple.com"
+  pem: "full_path/to/cert.pem"       
+
 = Sending push notifications to android devices
 
 We use gcm to send notifications accross all android devices
 Obtain gcm_api_key from google developer console refer: https://developers.google.com/cloud-messaging/
-set this key in ENV['gcm_api_key']
 
 = Sending push notifications to ios devices
 
 We are using APNS to send notifications accross all ios devices
 Obtain ios certificate as a pem file
-make sure to set APNS.host and APNS.pem with valid values refer: https://github.com/jpoz/APNS
 
+= Sidekiq Dashboard
+
+For monitoring background process, Admin can able to access the sidekiq dashboard.
+Sidekiq dashboard is added as link to top menu for admin.
+refer: http://sidekiq.org/
