--- a/README.rdoc
+++ b/README.rdoc
@@ -35,12 +35,39 @@ Obtain gcm_api_key from google developer console refer: https://developers.googl
 
 = Sending push notifications to ios devices
 
-We are using APNS to send notifications accross all ios devices
+We are using APNS to send notifications accross all ios devices.
+
 Obtain ios certificate as a pem file
+
 refer: https://github.com/jpoz/APNS
 
 = Sidekiq Dashboard
 
 For monitoring background process, Admin can able to access the sidekiq dashboard.
+
 Sidekiq dashboard is added as link to top menu for admin.
+
 refer: http://sidekiq.org/
+
+= License
+
+Apache License
+
+Version 2.0, January 2004
+
+Copyright (c) 2016 QBurst Technologies Inc.
+
+Licensed under the Apache License, Version 2.0 (the "License");
+
+you may not use this file except in compliance with the License.
+
+You may obtain a copy of the License at
+
+http://www.apache.org/licenses/LICENSE-2.0
+
+Unless required by applicable law or agreed to in writing, 
+software distributed under the License is distributed on an "AS IS" BASIS, 
+WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, 
+either express or implied.
+ 
+See the License for the specific language governing permissions and limitations under the License.
